Update JOSS branch to NM 5 (#817)
* About #751 remove empty geometry in clean buildings wps process.

* modified:   wps_scripts/src/main/groovy/org/noise_planet/noisemodelling/wps/NoiseModelling/Noise_level_from_source.groovy
AttenuationCnossosParameters -> AttenuationParameters

* modified:   wps_scripts/src/main/groovy/org/noise_planet/noisemodelling/wps/NoiseModelling/Noise_level_from_source.groovy

* Update Noise_level_from_source.groovy

* modified:   wps_scripts/src/main/groovy/org/noise_planet/noisemodelling/wps/NoiseModelling/Noise_level_from_source.groovy

* DataAssim !!

* Fix Data_Assim Maguette (WIP)

* Fix Data_Assim Maguette (done)

* Add std.out to log4j.rootCategory and time stamp to the log message format

* About #765 add conformity ratio

* chore: get the right initial version of Noise_From_Attenuation_Matrix_MatSim.groovy

* choes: remove obsolete ZerodB_Source_From_Roads script

* remove unneccessary wps bloc since 5.0

* Add A test for the matsim tuto

* Add A test for the matsim tuto

* Update Matsim tutorial

* make timeBinSize optional and describe default value

* Update Point_Source_From_Network.groovy

About #773 do not return null on wps

* feat: update to matsim 2025.0, java 21, gradle 8

* fix: gradlew permissions

* fix: update gh workflows with java 21

* back to java 11 and matsim 14

* fix: back to java 11

* correction height directivity train

* fix: back to java 11

* uniform some double casts

* revert some changes

* fix: Deploy WPS is not run on push to main (#778)

* Revert "fix: Deploy WPS is not run on push to main (#778)" (#779)

This reverts commit 1d641c158ba399e86bb24ca501b39d3aa78cde3a.

* Update CI.yml

publish instead of old task

* Update CI.yml

* Fix dataAssimilation

* Fix dataAssimilation

* Update Input_roads.rst

dead link

* Fix dataAssimilation

* Data Assimilation

* Update Scientific_production.rst

* Update Scientific_production.rst

* Update Input_acoustics.rst

Fix issue in documentation

* Update Merg